--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,7 +9,11 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
+
+    defaults:
+      run:
+        working-directory: ./ICT3101Calculator/
 
     steps:
     - uses: actions/checkout@v3
@@ -21,5 +25,9 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
-    - name: Test
+    - name: NUnit Test
+      working-directory: ICT3101_Calculator.UnitTests/
+      run: dotnet test --no-build --verbosity normal
+    - name: SpecFlow Test
+      working-directory: SpecFlowCalculatorTests/
       run: dotnet test --no-build --verbosity normal
