--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,6 +11,10 @@ jobs:
 
     runs-on: windows-latest
 
+    defaults:
+      run:
+        working-directory: ICT3101_Calculator.sln
+
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
